tests/fixtures/esm/errors/path_escape/root/main.js
import { hiddenLabel } from '../outside.js';

App.run({
    title: 'Path Escape Fixture',
    render: () => Text({ text: hiddenLabel })
});
